update: add ECSTaskExecutionRole parameter to service templates and reference in task definition

--- a/infra/deploy/dashboard-service.yml
+++ b/infra/deploy/dashboard-service.yml
@@ -7,4 +7,5 @@ parameters:
   PathPattern: /dashboard/*
   ServiceName: dashboard-service
   ListenerPriority: 2
+  ECSTaskExecutionRole: arn:aws:iam::970547356413:role/Devfolio-ECS-Role-K4gBJ4VBNLMQ
 tags: {}
