--- a/infra/deploy/auth-service.yml
+++ b/infra/deploy/auth-service.yml
@@ -7,4 +7,5 @@ parameters:
   PathPattern: /auth/*
   ServiceName: auth-service
   ListenerPriority: 1
+  ECSTaskExecutionRole: arn:aws:iam::970547356413:role/Devfolio-ECS-Role-K4gBJ4VBNLMQ
 tags: {}
