--- a/infra/templates/ecs.yml
+++ b/infra/templates/ecs.yml
@@ -4,7 +4,7 @@ Parameters:
     Default: "t2.medium"
   DesiredCapacity:
     Type: Number
-    Default: "1"
+    Default: 1
   MaxSize:
     Type: Number
     Default: "10"
@@ -81,7 +81,7 @@ Resources:
       LaunchTemplate:
         LaunchTemplateId: !Ref ContainerInstances
         Version: !GetAtt ContainerInstances.LatestVersionNumber
-      MinSize: 0
+      MinSize: 1
       MaxSize: !Ref MaxSize
       DesiredCapacity: !Ref DesiredCapacity
       NewInstancesProtectedFromScaleIn: true
