--- a/infra/templates/ecs.yml
+++ b/infra/templates/ecs.yml
@@ -15,7 +15,8 @@ Parameters:
   Subnet2:
     Type: AWS::EC2::Subnet::Id
   ImageId:
-    Type: AWS::EC2::Image::Id
+    Type: AWS::SSM::Parameter::Value<String>
+    Description: The AMI ID for the ECS-optimized Amazon Linux 2023 AMI.
     Default: /aws/service/ecs/optimized-ami/amazon-linux-2023/recommended/image_id
   LoadBalancerSG:
     Type: String
