update: enable MetadataOptions for ECS instances to enhance security

--- a/infra/templates/ecs.yml
+++ b/infra/templates/ecs.yml
@@ -67,6 +67,9 @@ Resources:
               echo ECS_CLUSTER=${Cluster} >> /etc/ecs/ecs.config
               yum install -y aws-cfn-bootstrap
               /opt/aws/bin/cfn-init -v --stack ${AWS::StackId} --resource ContainerInstances --configsets full_install --region ${AWS::Region} &
+            MetadataOptions:
+              HttpEndpoint: enabled
+              HttpTokens: required
 
   InstanceProfile:
     Type: AWS::IAM::InstanceProfile
