--- a/infra/templates/ecs.yml
+++ b/infra/templates/ecs.yml
@@ -61,9 +61,10 @@ Resources:
           Name: !Ref InstanceProfile
         SecurityGroupIds:
           - !Ref ContainerHostSecurityGroup
-        NetworkInterfaces:
-        - AssociatePublicIpAddress: true
-          DeviceIndex: 0
+        AssignPublicIp: ENABLED
+        # NetworkInterfaces:
+        # - AssociatePublicIpAddress: true
+        #   DeviceIndex: 0
         UserData:
           Fn::Base64: !Sub |
             #!/bin/bash -xe
