--- a/infra/templates/ecs.yml
+++ b/infra/templates/ecs.yml
@@ -64,7 +64,7 @@ Resources:
         NetworkInterfaces:
         - AssociatePublicIpAddress: true
           DeviceIndex: 0
-          Groups:
+          SecurityGroupIds:
             - !Ref ContainerHostSecurityGroup
         UserData:
           Fn::Base64: !Sub |
