--- a/infra/deploy/ecs.yml
+++ b/infra/deploy/ecs.yml
@@ -1,10 +1,5 @@
 template-file-path: infra/templates/ecs.yml
 parameters:
-  VpcId: vpc-020d437435794899e
-  # Subnets: [ subnet-02746d42ba51a1211, subnet-046f1683e3ca6704b ]
-  Subnet1: subnet-02746d42ba51a1211
-  Subnet2: subnet-046f1683e3ca6704b
-  MaxSize: 3
-  # ImageId: ami-054ba1cb82f26097d
-  LoadBalancerSG: sg-0c98b0234ed5696b2
+  ParentVPCStack: Devfolio-Network
+  ParentALBStack: Devfolio-ALB
 tags: {}
